# LlamaIndex_chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  README.md  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml  format.py  main.py  pyproject.toml
app/: agent.py  api.py  config.py
app/templates/: index.html
frontend/: .dockerignore  Dockerfile  log.txt  next.config.js  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  InputArea.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx  SidebarButton.tsx
